Fixed bug in sca and regulatory compliance tables and in wz menu on firefox

--- a/public/components/wz-menu/wz-menu.scss
+++ b/public/components/wz-menu/wz-menu.scss
@@ -115,7 +115,7 @@ wz-menu {
 }
 
 .wz-menu-overview {
-    min-width: 700px;
+    min-width: 716px;
 }
 
 @media only screen and (max-width: 767px){
